@@ -11,21 +11,21 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
-        <mavencompiler.version>3.8.1</mavencompiler.version>
-        <slf4j.version>1.7.30</slf4j.version>
-        <junit.version>4.12</junit.version>
+        <java.version>25</java.version>
+        <mavencompiler.version>3.13.0</mavencompiler.version>
+        <slf4j.version>2.0.16</slf4j.version>
+        <junit.version>4.13.2</junit.version>
         <jfreechart.version>1.5.0</jfreechart.version>
         <jcommon.version>1.0.24</jcommon.version>
         <jquantlib.version>${project.version}</jquantlib.version>
         <maven.versions.plugin>2.8.1</maven.versions.plugin>
         <maven.enforcer.plugin>3.0.0-M3</maven.enforcer.plugin>
         <maven.clean.plugin>2.1</maven.clean.plugin>
-        <maven.surefire.plugin>2.22.0</maven.surefire.plugin>
-        <maven.failsafe.plugin>2.22.0</maven.failsafe.plugin>
+        <maven.surefire.plugin>3.5.2</maven.surefire.plugin>
+        <maven.failsafe.plugin>3.5.2</maven.failsafe.plugin>
         <maven.checkstyle.plugin.version>2.1</maven.checkstyle.plugin.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
-        <maven-compiler-plugin.version>3.9.0</maven-compiler-plugin.version>
+        <maven-compiler-plugin.version>3.13.0</maven-compiler-plugin.version>
         <nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
     </properties>
 
@@ -168,7 +168,6 @@
                     <argLine>
                         -Xmx4g
                         -XX:MaxMetaspaceSize=512m
-                        --illegal-access=permit
                     </argLine>
                 </configuration>
             </plugin>
@@ -178,7 +177,6 @@
                 <version>${maven.failsafe.plugin}</version>
                 <configuration>
                     <argLine>
-                        --illegal-access=permit
                     </argLine>
                 </configuration>
             </plugin>
@@ -196,7 +194,6 @@
 
     <modules>
         <module>../jquantlib</module>
-        <module>../jquantlib-contrib</module>
         <module>../jquantlib-helpers</module>
         <module>../jquantlib-samples</module>
     </modules>
